--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,7 +1,21 @@
+bcrypt==3.1.0
+blinker==1.4
+cffi==1.8.2
 click==6.6
 Flask==0.11.1
+Flask-Login==0.3.2
+Flask-Mail==0.9.1
+Flask-SQLAlchemy==2.1
+Flask-User==0.6.8
+Flask-WTF==0.12
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+passlib==1.6.5
+pycparser==2.14
+pycrypto==2.6.1
 pysqlite==2.8.3
+six==1.10.0
+SQLAlchemy==1.0.15
 Werkzeug==0.11.11
+WTForms==2.1
