--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,8 +1,10 @@
+Babel==2.3.4
 bcrypt==3.1.0
 blinker==1.4
 cffi==1.8.2
 click==6.6
 Flask==0.11.1
+Flask-Babel==0.11.1
 Flask-Login==0.3.2
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.1
@@ -15,7 +17,9 @@ passlib==1.6.5
 pycparser==2.14
 pycrypto==2.6.1
 pysqlite==2.8.3
+pytz==2016.6.1
 six==1.10.0
+speaklater==1.3
 SQLAlchemy==1.0.15
 Werkzeug==0.11.11
 WTForms==2.1
