--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -13,11 +13,17 @@ Flask-WTF==0.12
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+numpy==1.11.2
+pandas==0.19.0
 passlib==1.6.5
+pkg-resources==0.0.0
 pycparser==2.14
 pycrypto==2.6.1
 pysqlite==2.8.3
+python-dateutil==2.5.3
 pytz==2016.6.1
+scikit-learn==0.18
+scipy==0.18.1
 six==1.10.0
 speaklater==1.3
 SQLAlchemy==1.0.15
