--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,8 +1,10 @@
 Babel==2.3.4
 bcrypt==3.1.0
 blinker==1.4
+caniusepython3==4.0.0
 cffi==1.8.2
 click==6.6
+distlib==0.2.4
 Flask==0.11.1
 Flask-Babel==0.11.1
 Flask-Login==0.3.2
@@ -10,21 +12,27 @@ Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.1
 Flask-User==0.6.8
 Flask-WTF==0.12
+futures==3.0.5
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 numpy==1.11.2
+packaging==16.8
 pandas==0.19.0
 passlib==1.6.5
 pycparser==2.14
 pycrypto==2.6.1
+pyparsing==2.1.10
 pysqlite==2.8.3
 python-dateutil==2.5.3
 pytz==2016.6.1
+requests==2.12.3
 scikit-learn==0.18
 scipy==0.18.1
 six==1.10.0
 speaklater==1.3
 SQLAlchemy==1.0.15
+textar==0.0.4
 Werkzeug==0.11.11
 WTForms==2.1
+xlrd==1.0.0
