--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+appdirs==1.4.3
 Babel==2.3.4
 bcrypt==3.1.0
 blinker==1.4
@@ -5,6 +6,7 @@ caniusepython3==4.0.0
 cffi==1.8.2
 click==6.6
 distlib==0.2.4
+et-xmlfile==1.0.1
 Flask==0.11.1
 Flask-Babel==0.11.1
 Flask-Login==0.3.2
@@ -14,9 +16,11 @@ Flask-User==0.6.8
 Flask-WTF==0.12
 futures==3.0.5
 itsdangerous==0.24
+jdcal==1.3
 Jinja2==2.8
 MarkupSafe==0.23
 numpy==1.11.2
+openpyxl==2.4.7
 packaging==16.8
 pandas==0.19.0
 passlib==1.6.5
