--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,35 @@
 appdirs==1.4.3
-Babel==2.3.4
-bcrypt==3.1.0
+Babel==2.4.0
+bcrypt==3.1.3
 blinker==1.4
-caniusepython3==4.0.0
-cffi==1.8.2
-click==6.6
-distlib==0.2.4
+cffi==1.10.0
+click==6.7
 et-xmlfile==1.0.1
-Flask==0.11.1
-Flask-Babel==0.11.1
-Flask-Login==0.3.2
+Flask==0.12.2
+Flask-Babel==0.11.2
+Flask-Login==0.4.0
 Flask-Mail==0.9.1
-Flask-SQLAlchemy==2.1
-Flask-User==0.6.8
-Flask-WTF==0.12
-futures==3.0.5
+Flask-SQLAlchemy==2.2
+Flask-User==0.6.11
+Flask-WTF==0.14.2
 itsdangerous==0.24
 jdcal==1.3
-Jinja2==2.8
-MarkupSafe==0.23
-numpy==1.11.2
+Jinja2==2.9.6
+MarkupSafe==1.0
+numpy==1.12.1
 openpyxl==2.4.7
 packaging==16.8
-pandas==0.19.0
-passlib==1.6.5
-pycparser==2.14
-pycrypto==2.6.1
-pyparsing==2.1.10
-pysqlite==2.8.3
-python-dateutil==2.5.3
-pytz==2016.6.1
-requests==2.12.3
-scikit-learn==0.18
-scipy==0.18.1
+pandas==0.20.1
+passlib==1.7.1
+pycparser==2.17
+pycryptodome==3.4.5
+pyparsing==2.2.0
+python-dateutil==2.6.0
+pytz==2017.2
+scikit-learn==0.18.1
+scipy==0.19.0
 six==1.10.0
-speaklater==1.3
-SQLAlchemy==1.0.15
+SQLAlchemy==1.1.9
 textar==0.0.4
-Werkzeug==0.11.11
+Werkzeug==0.12.2
 WTForms==2.1
-xlrd==1.0.0
