--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ pytz==2017.2
 scikit-learn==0.18.1
 scipy==0.19.0
 six==1.10.0
+speaklater==1.3
 SQLAlchemy==1.1.9
 textar==0.0.4
 Werkzeug==0.12.2
